packages/fb_connector/lib/src/ffi/fb_bindings.dart


  int isc_embed_dsql_execute(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
  ) {
    return _isc_embed_dsql_execute(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_embed_dsql_executePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_execute');
  late final _isc_embed_dsql_execute = _isc_embed_dsql_executePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_execute2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
    ffi.Pointer<XSQLDA> arg5,
  ) {
    return _isc_embed_dsql_execute2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_embed_dsql_execute2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_execute2');
  late final _isc_embed_dsql_execute2 = _isc_embed_dsql_execute2Ptr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<XSQLDA>,
          ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_execute_immed(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    ffi.Pointer<XSQLDA> arg6,
  ) {
    return _isc_embed_dsql_execute_immed(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_embed_dsql_execute_immedPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_execute_immed');
  late final _isc_embed_dsql_execute_immed =
      _isc_embed_dsql_execute_immedPtr.asFunction<
          int Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              int,
              ffi.Pointer<ISC_SCHAR>,
              int,
              ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_fetch(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_embed_dsql_fetch(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_embed_dsql_fetchPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16, ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_fetch');
  late final _isc_embed_dsql_fetch = _isc_embed_dsql_fetchPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_fetch_a(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ffi.Int32> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
  ) {
    return _isc_embed_dsql_fetch_a(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_embed_dsql_fetch_aPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ISC_SCHAR>,
              ISC_USHORT,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_fetch_a');
  late final _isc_embed_dsql_fetch_a = _isc_embed_dsql_fetch_aPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<XSQLDA>)>();

  void isc_embed_dsql_length(
    ffi.Pointer<ISC_UCHAR> arg0,
    ffi.Pointer<ISC_USHORT> arg1,
  ) {
    return _isc_embed_dsql_length(
      arg0,
      arg1,
    );
  }

  late final _isc_embed_dsql_lengthPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_USHORT>)>>('isc_embed_dsql_length');
  late final _isc_embed_dsql_length = _isc_embed_dsql_lengthPtr.asFunction<
      void Function(ffi.Pointer<ISC_UCHAR>, ffi.Pointer<ISC_USHORT>)>();

  int isc_embed_dsql_open(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
  ) {
    return _isc_embed_dsql_open(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_embed_dsql_openPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_open');
  late final _isc_embed_dsql_open = _isc_embed_dsql_openPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_open2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
    ffi.Pointer<XSQLDA> arg5,
  ) {
    return _isc_embed_dsql_open2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_embed_dsql_open2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_open2');
  late final _isc_embed_dsql_open2 = _isc_embed_dsql_open2Ptr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<XSQLDA>,
          ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_insert(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_embed_dsql_insert(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_embed_dsql_insertPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16, ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_insert');
  late final _isc_embed_dsql_insert = _isc_embed_dsql_insertPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_prepare(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
    int arg6,
    ffi.Pointer<XSQLDA> arg7,
  ) {
    return _isc_embed_dsql_prepare(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
    );
  }

  late final _isc_embed_dsql_preparePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_embed_dsql_prepare');
  late final _isc_embed_dsql_prepare = _isc_embed_dsql_preparePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<XSQLDA>)>();

  int isc_embed_dsql_release(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
  ) {
    return _isc_embed_dsql_release(
      arg0,
      arg1,
    );
  }

  late final _isc_embed_dsql_releasePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_SCHAR>)>>('isc_embed_dsql_release');
  late final _isc_embed_dsql_release = _isc_embed_dsql_releasePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_SCHAR>)>();

  /// /
  FB_BLOB_STREAM BLOB_open(
    int arg0,
    ffi.Pointer<ISC_SCHAR> arg1,
    int arg2,
  ) {
    return _BLOB_open(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _BLOB_openPtr = _lookup<
      ffi.NativeFunction<
          FB_BLOB_STREAM Function(isc_blob_handle, ffi.Pointer<ISC_SCHAR>,
              ffi.Int32)>>('BLOB_open');
  late final _BLOB_open = _BLOB_openPtr.asFunction<
      FB_BLOB_STREAM Function(int, ffi.Pointer<ISC_SCHAR>, int)>();

  int BLOB_put(
    int arg0,
    FB_BLOB_STREAM arg1,
  ) {
    return _BLOB_put(
      arg0,
      arg1,
    );
  }

  late final _BLOB_putPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ISC_SCHAR, FB_BLOB_STREAM)>>(
      'BLOB_put');
  late final _BLOB_put =
      _BLOB_putPtr.asFunction<int Function(int, FB_BLOB_STREAM)>();

  int BLOB_close(
    FB_BLOB_STREAM arg0,
  ) {
    return _BLOB_close(
      arg0,
    );
  }

  late final _BLOB_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FB_BLOB_STREAM)>>(
          'BLOB_close');
  late final _BLOB_close =
      _BLOB_closePtr.asFunction<int Function(FB_BLOB_STREAM)>();

  int BLOB_get(
    FB_BLOB_STREAM arg0,
  ) {
    return _BLOB_get(
      arg0,
    );
  }

  late final _BLOB_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FB_BLOB_STREAM)>>(
          'BLOB_get');
  late final _BLOB_get =
      _BLOB_getPtr.asFunction<int Function(FB_BLOB_STREAM)>();

  int BLOB_display(
    ffi.Pointer<ISC_QUAD> arg0,
    int arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
  ) {
    return _BLOB_display(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _BLOB_displayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ISC_QUAD>, isc_db_handle,
              isc_tr_handle, ffi.Pointer<ISC_SCHAR>)>>('BLOB_display');
  late final _BLOB_display = _BLOB_displayPtr.asFunction<
      int Function(ffi.Pointer<ISC_QUAD>, int, int, ffi.Pointer<ISC_SCHAR>)>();

  int BLOB_dump(
    ffi.Pointer<ISC_QUAD> arg0,
    int arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
  ) {
    return _BLOB_dump(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _BLOB_dumpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ISC_QUAD>, isc_db_handle,
              isc_tr_handle, ffi.Pointer<ISC_SCHAR>)>>('BLOB_dump');
  late final _BLOB_dump = _BLOB_dumpPtr.asFunction<
      int Function(ffi.Pointer<ISC_QUAD>, int, int, ffi.Pointer<ISC_SCHAR>)>();

  int BLOB_edit(
    ffi.Pointer<ISC_QUAD> arg0,
    int arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
  ) {
    return _BLOB_edit(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }
